# ZZClean

./: .gitignore  CMakeLists.txt  README.md
include/: cleaner.h  cleaner.hpp
lib/: README.md
src/: cleaner.cpp  main.cpp
